-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 190301) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][devT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO);
		       an even number means stable while odd marks 
		       development releases
  Z = revision       - small changes to major.minor version (optional)
		
  devT = dev-release - development releases leading to the next stable
		       version

-----------------------------------------------------------------------

Last officially released version is -*> v1.8.2r14 <*-

??032001 (v1.9dev5)
	- added: eiam - new aliases 'getpos', 'c-set-position',
		 'aio-set-position', 'aio-getpos'
	- added: eiam - 'int-cmd-list', 'int-version-string'.
		 'int-version-lib-current', 'int-version-lib-revision',
		 'int-version-lib-age'
	- fixed: mp3 output broken
	- fixed: more zombie-problems with mpg123, lame, ogg123 
	         and others
	- fixed: eiam - 'fw' and 'rw' commands didn't work properly
		 if -z:db was enabled and audio object sample rate
		 was different than internal sample rate
	- fixed: eiam - 'ctrl-remove' remove the selected chainop,
		 not the controller as it should have
06032001 (v1.9dev4)
	- added: -C - disable interactive mode; reverse op. for -c
	- added: -X - open outputs for updating; rev.op. for -x
	- added: -r:-1 to disable raised-priority mode		
	- added: -z:nopsr, -z:noxruns and -z:intbuf ; rev.ops for
		 existing -z options
	- added: 'user-resource-directory' define to ~/.ecasoundrc;
		 see ecasoundrc(5) for details
	- changed: ecasoundrc - the default midi-device has to be 
		   given using the new 'type,device' syntax; defaults
		   to 'rawmidi,/dev/midi'
	- changed: man pages are now distributed in nroff 'man' format